fix emails tags

--- a/hackers/templates/mails/include/closing.html
+++ b/hackers/templates/mails/include/closing.html
@@ -18,4 +18,4 @@ Have any other question? Email us at {{ email|urlize }}
 {% include 'include/email_line.html' with text="See you soon!" %}
 {% include 'include/email_line.html' with text="Best," %}
 {% include 'include/email_line.html' with text="" %}
-{% include 'include/email_line.html' with text=edition_name|add:" Team" %}
+{% include 'include/email_line.html' with text=hackathon_name|add:" Team" %}
