--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -1,7 +1,4 @@
 {% load static %}
-{% load utils %}
-{% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
-{% settings_value "CURRENT_EDITION" as edition_name %}
 {# Based on https://github.com/leemunroe/responsive-html-email-template #}
 <!DOCTYPE html>
 <html>
@@ -105,7 +102,7 @@
             <div class="content"
                  style="box-sizing:border-box;display:block;margin:0 auto;max-width:580px;padding:10px;">
                 <img class="max-width" width="1240" height=""
-                     src="{{ static_values.logo_url }}"
+                     src="{{ logo_url }}"
                      alt="" border="0"
                      style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-width: 1240px !important; width: 80% !important; height: auto !important; "/>
                 <!-- START CENTERED WHITE CONTAINER -->
@@ -153,16 +150,16 @@
                                     style="font-family:sans-serif;font-size:14px;vertical-align:top;color:#999999;font-size:12px;text-align:center;">
                                     {% block footer_content %}
 
-                                        {% include 'include/email_footer_line.html' with text='You are receiving this because you applied to '|add:edition_name %}
-                                        {% include 'include/email_footer_line.html' with text='. If you think this is a mistake, please send us an email at '|add:static_values.email|urlize %}
+                                        {% include 'include/email_footer_line.html' with text='You are receiving this because you applied to '|add:hackathon_name %}
+                                        {% include 'include/email_footer_line.html' with text='. If you think this is a mistake, please send us an email at '|add:email|urlize %}
                                     {% endblock %}
                                     <table style="padding-top: 20px" cellpadding="0" cellspacing="0" border="0"
                                            align="center">
                                         <tr>
-                                            {% if static_values.fb %}
+                                            {% if fb %}
                                                 <td style="padding: 0px 5px;">
                                                     <a role="social-icon-link"
-                                                       href="http://www.facebook.com/{{ static_values.fb }}"
+                                                       href="http://www.facebook.com/{{ fb }}"
                                                        target="_blank" border="0" alt="Facebook" title="Facebook"
                                                        style="background-color: #3B579D; border-radius: 0px; -webkit-border-radius:0px; -moz-border-radius:0px; -ms-border-radius:0px; -o-border-radius:0px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
                                                         <img role="social-icon" alt="Facebook" title="Facebook"
@@ -174,9 +171,9 @@
                                                     </a>
                                                 </td>
                                             {% endif %}
-                                            {% if static_values.twitter %}
+                                            {% if twitter %}
                                                 <td style="padding: 0px 5px;"><a role="social-icon-link"
-                                                                                 href="http://www.twitter.com/{{ static_values.twitter }}"
+                                                                                 href="http://www.twitter.com/{{ twitter }}"
                                                                                  target="_blank" border="0"
                                                                                  alt="Twitter"
                                                                                  title="Twitter"
