--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
 {% load static %}
-{% load utils %}
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -10,16 +9,15 @@
 {% block title %}500 Oops {% endblock %}
 
 {% block body %}
-    {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
 
     <h1 class="text-center margin-top">500 Oops</h1>
     <h2 class="text-center">Server Error </h2>
     <p class="text-center">It seems like you found an error. Please reach us out
-        at {{ static_values.email|urlize }} if the problem persists.</p>
-    {% if static_values.repo_url %}
+        at {{ h_contact_email|urlize }} if the problem persists.</p>
+    {% if h_issues_url %}
         <p class="text-center">
             Or you can open an issue
-            <a target="_blank" href="{{ static_values.issues_url }}">here</a>.
+            <a target="_blank" href="{{ h_issues_url }}">here</a>.
         </p>
     {% endif %}
 {% endblock %}
