--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,9 +1,5 @@
 {% load static %}
 {% load bootstrap3 %}
-{% load utils %}
-{% settings_value "EVENT_NAME" as event_name %}
-{% settings_value "EVENT_DOMAIN" as domain %}
-{% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,28 +11,28 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <meta name="theme-color" content="#494949">
-    <meta name="author" content="{{ event_name }}">
+    <meta name="author" content="{{ h_name }}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}"/>
-    <meta name="description" content="{{ static_values.description }}">
+    <meta name="description" content="{{ h_description }}">
 
 
     <!--FACEBOOK DESCRIPTION -->
-    <meta property="og:title" content="My {{ event_name }}"/>
-    <meta property="og:site_name" content="My {{ event_name }}"/>
-    <meta property="og:description" content="{{ static_values.description }}"/>
-    <meta property="og:image" content="https://{{ domain }}{% static 'header_rrss.png' %}">
-    <meta property="og:image:secure_url" content="https://{{ domain }}{% static 'header_rrss.png' %}">
-    <meta property="og:url" content="https://{{ domain }}/">
+    <meta property="og:title" content="My {{ h_name }}"/>
+    <meta property="og:site_name" content="My {{ h_name }}"/>
+    <meta property="og:description" content="{{ h_description }}"/>
+    <meta property="og:image" content="https://{{ h_domain }}{% static 'header_rrss.png' %}">
+    <meta property="og:image:secure_url" content="https://{{ h_domain }}{% static 'header_rrss.png' %}">
+    <meta property="og:url" content="https://{{ h_domain }}/">
 
     <!--TWITTER DESCRIPTION -->
-    <meta name="twitter:card" content="summary_large_image">
-    {% if static_values.twitter %}
-        <meta name="twitter:site" content="@{{ static_values.twitter }}">
-        <meta name="twitter:creator" content="@{{ static_values.twitter }}">
+    <meta name="twitter:card" content="summary">
+    {% if h_tw %}
+        <meta name="twitter:site" content="@{{ h_tw }}">
+        <meta name="twitter:creator" content="@{{ h_tw }}">
     {% endif %}
-    <meta name="twitter:title" content="My {{ event_name }}">
-    <meta name="twitter:description" content="{{ static_values.description }}">
-    <meta name="twitter:image" content="https://{{ domain }}{% static 'header_rrss.png' %}">
+    <meta name="twitter:title" content="My {{ h_name }}">
+    <meta name="twitter:description" content="{{ h_description }}">
+    <meta name="twitter:image" content="https://{{ h_domain }}{% static 'header_rrss.png' %}">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,7 +40,7 @@
     {% block head %}
     {% endblock %}
 
-    <title>{% block title %}{% block head_title %}{% endblock %} - {% endblock %}My {{ event_name }}</title>
+    <title>{% block title %}{% block head_title %}{% endblock %} - {% endblock %}My {{ h_name }}</title>
 </head>
 
 
@@ -60,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand white-text" href="/">My {{ event_name }}</a>
+                <a class="navbar-brand white-text" href="/">My {{ h_name }}</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
@@ -121,7 +117,7 @@
 
     {% endblock %}
 </div>
-{% if static_values.google_analytics %}
+{% if h_ga %}
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -135,7 +131,7 @@
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', '{{ static_values.google_analytics }}', 'auto');
+        ga('create', '{{ h_ga }}', 'auto');
         ga('send', 'pageview');
 
     </script>
