--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -6,15 +6,24 @@
 
 {% block content %}
 
-    <h1>Sign up</h1>
-
-    <form action="" method="post" class="form form-horizontal">
-        {% csrf_token %}
-        {% bootstrap_form form layout="horizontal" %}
-        <button class="btn btn-primary btn-block" type="submit">{% trans "Sign Up" %}</button>
+    {% if h_app_closed %}
+        <h1>Applications are closed</h1>
+        {% include 'include/applications_closed.html' %}
         <a class="btn btn-default btn-block"
-           href="{% url 'account_login' %}">{% trans "...or log in if you already have an account " %}</a>
+           href="{% url 'account_login' %}">{% trans "Log in " %}</a>
+    {% else %}
+        <h1>Sign up</h1>
+        {% if h_app_timeleft %}
+            <h3>Application deadline:{% include 'include/deadline_countdown.html' %}</h3>
+        {% endif %}
+        <form action="" method="post" class="form form-horizontal">
+            {% csrf_token %}
+            {% bootstrap_form form layout="horizontal" %}
+            <button class="btn btn-primary btn-block" type="submit">{% trans "Sign Up" %}</button>
+            <a class="btn btn-default btn-block"
+               href="{% url 'account_login' %}">{% trans "...or log in if you already have an account " %}</a>
 
-    </form>
+        </form>
+    {% endif %}
 
 {% endblock %}
