--- a/hackers/templates/cancel.html
+++ b/hackers/templates/cancel.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load utils %}
 {% load static %}
 {% block title %}Cancel application - {% endblock %}
 
@@ -8,7 +7,6 @@
 {% endblock %}
 
 {% block body %}
-    {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
 
     <div class="confirm-content">
         <div class="col-md-8 col-md-offset-2">
@@ -17,7 +15,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">
                             {% if application %}
-                                We are sorry {{ application.hacker.name }}
+                                We are sorry {{ application.user.nickname }}
                             {% else %}
                                 ¯\_(ツ)_/¯
                             {% endif %}
@@ -28,7 +26,7 @@
                         <a href="{% url 'dashboard' %}" class="btn btn-default btn-block"> Back to your profile</a>
                     </div>
                     <div class="panel-footer">
-                        Please contact us if you think this is an error: {{ static_values.email|urlize }}
+                        Please contact us if you think this is an error: {{ h_contact_email|urlize }}
                     </div>
                 </div>
 
