--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,9 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <meta name="theme-color" content="#494949">
+    {% if h_theme_color %}
+        <meta name="theme-color" content="{{ h_theme_color }}">
+    {% endif %}
     <meta name="author" content="{{ h_name }}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}"/>
     <meta name="description" content="{{ h_description }}">
