--- a/hackers/templates/phases/application.html
+++ b/hackers/templates/phases/application.html
@@ -22,7 +22,7 @@
 {% elif application.is_cancelled %}
     We are sorry that you can't come to {{ event_name }}. We are looking forward to welcome you next edition.
 {% elif application.answered_invite %}
-    <p>Thanks for answering our invite! See you soon at HackUPC!</p>
+    <p>Thanks for answering our invite! See you soon at {{ h_name }}!</p>
     {% include 'include/cancel.html' %}
     {% include 'include/reimbursement.html' %}
 {% else %}
