--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -104,12 +104,12 @@
                 <img class="max-width" width="1240" height=""
                      src="{{ h_logo }}"
                      alt="" border="0"
-                     style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-width: 1240px !important; width: 80% !important; height: auto !important; "/>
+                     style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-height:170px; max-width: 1240px !important; width: auto !important; height: auto !important; "/>
                 <!-- START CENTERED WHITE CONTAINER -->
                 <span class="preheader"
                       style="color:transparent;display:none;height:0;max-height:0;max-width:0;opacity:0;overflow:hidden;mso-hide:all;visibility:hidden;width:0;">
                     {% block preheader %}
-                        New {{ h_name }} email for you!
+                    New {{ h_name }} email for you!
                     {% endblock %}</span>
                 {% block main %}
                     <table class="main"
