fix email images for MS

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -101,10 +101,10 @@
             style="font-family:sans-serif;font-size:14px;vertical-align:top;display:block;max-width:580px;padding:10px;width:580px;Margin:0 auto !important;">
             <div class="content"
                  style="box-sizing:border-box;display:block;margin:0 auto;max-width:580px;padding:10px;">
-                <img class="max-width" width="1240" height=""
+                <img class="max-width"
                      src="{{ h_logo }}"
                      alt="" border="0"
-                     style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-height:170px; max-width: 1240px !important; width: auto !important; height: auto !important; "/>
+                     style="display: block; color: #000; margin: 0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-height:170px !important; max-width: 70% !important; width: auto !important; height: auto !important; "/>
                 <!-- START CENTERED WHITE CONTAINER -->
                 <span class="preheader"
                       style="color:transparent;display:none;height:0;max-height:0;max-width:0;opacity:0;overflow:hidden;mso-hide:all;visibility:hidden;width:0;">
