--- a/app/templates/include/email_image.html
+++ b/app/templates/include/email_image.html
@@ -1,4 +1,4 @@
-<img class="max-width" width="{{ width|default:"1240" }}" height=""
+<img class="max-width"
      src="{{ url }}"
      alt="" border="0"
-     style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-width: 1240px !important; width: 80% !important; height: auto !important; "/>
+     style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-height:170px !important; max-width: 70% !important; width: auto !important; height: auto !important; "/>
