--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
         <meta name="theme-color" content="{{ h_theme_color }}">
     {% endif %}
     <meta name="author" content="{{ h_name }}">
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}"/>
+    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
     <meta name="description" content="{{ h_description }}">
 
 
